horizontal scroll fix

--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -13,6 +13,7 @@
   background-position: center;
   object-fit: cover;
   min-height: 740px;
+  width: 100%;
 }
 
 .cover__item::before {
